Implement joint level services for all controllers

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,7 +1,11 @@
 {
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP"],
-  "Enabled" : ["Posture"],
-  "Default" : "Posture",
+  //"Enabled" : ["Posture"],
+  //"Default" : "Posture",
+  //"Enabled" : ["Seq"],
+  //"Default" : "Seq",
+  "Enabled"   : ["Body6d"],
+  "Default"   : "Body6d",
   "Seq" : {
     //"Env" : {
     //  "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
