--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -17,6 +17,7 @@
       "Name" : "jvrc_ladder"
     },
     "Plan" : "jvrc_ladder_climbing.json",
-    "UseRealSensors" : 1
+    "UseRealSensors" : 1,
+    "StartStance" : 0
   }
 }
